welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:17: error: expected class or object definition
def Motif(c:Color){
^PatternPicture:33: error: expected class or object definition
def brosse(){
^PatternPicture:38: error: Unmatched closing brace '}' ignored here
}
^